--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: GCP_FASTAPI
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
